--- a/index_for_parent.html
+++ b/index_for_parent.html
@@ -3,7 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="pragma" content="no-cache" />
+        <meta
+            name="description"
+            content="Personal PHP projects with github repository"
+        />
+        <meta name="keywords" content="PHP, Github, GitHub with checking" />
+        <meta name="author" content="Jahangir Alam Rocky" />
+        <meta name="robots" content="index, follow" />
+        <meta name="googlebot" content="index, follow" />
+        <meta name="google" content="notranslate" />
+
+        <link id="favicon" rel="icon" href="" />
+
+        <title>INDEX</title>
     </head>
     <body>
         <iframe
